--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.11.1",
+    "axios": "^1.2.1",
     "graphql": "^16.6.0",
+    "json-server": "^0.17.1",
     "uuid": "^9.0.0"
   }
 }
